--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div id="ip-info" class="ip-info"></div>
         </div>
         <video id="bg-video" autoplay muted loop>
-            <source src="video.mp4" type="video/mp4">
+            <source src="https://cdn.discordapp.com/attachments/1106593924115603467/1221616109120127026/video.mp4?ex=661339a8&is=6600c4a8&hm=7d5ad7ddd339a673d72dd75994e55b685b55c93bd58d17ee98f8979a003dc07f&" type="video/mp4">
         </video>
     </div>
 
